Added almost everything

--- a/template/package.json
+++ b/template/package.json
@@ -8,6 +8,7 @@
     "chart.js": "^2.8.0",
     "codemirror": "^5.49.2",
     "flag-icon-css": "^3.4.5",
+    "gulp-cli": "^2.3.0",
     "jquery": "^3.4.1",
     "jvectormap": "^2.0.4",
     "material-components-web": "^3.2.0",
@@ -22,6 +23,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-inject": "^5.0.4",
     "gulp-inject-partials": "^1.0.5",
+    "gulp-real-favicon": "^0.3.2",
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
